update jiblm ver thru sec 7

--- a/hitchman_euclidean_geometry_jiblm.tex
+++ b/hitchman_euclidean_geometry_jiblm.tex
@@ -1209,6 +1209,12 @@ Here we shall plug  gaps in Book I with some very useful understanding.
 Show how to construct three segments which are not congruent to the sides of any triangle.
 \end{problem}
 
+\begin{annotation}
+{
+\color{blue}
+Note that Euclid I.20 is a geometric statement of the triangle inequality. That makes this an easy task to complete. After this is successfully presented, I mention the triangle inequality and mention that it is a very important tool for modern mathematicians, especially in analysis. This is a conversation that can be expanded to touch upon more modern metric space geometry ideas if time permits, just to pique interest.
+}
+\end{annotation}
 
 \begin{definition}
 \label{defn:right-triangles}
@@ -1224,10 +1230,24 @@ Suppose that $BC$ is congruent to $EF$ and $AB$ is congruent to $DE$.
 Then the triangles are congruent.\footnote{This is sometimes called the \emph{hypotenuse-leg} theorem.}
 \end{conjecture}
 
+\begin{annotation}
+{
+\color{blue}
+Students are tempted to prove this using the Pythagorean Theorem (Euclid I.47). Note that this is not one of the propositions they have read so far. Instead, I require students to find another way. Ordinarily, students find an argument that relies on superimposing the two triangles. This relates to Problem \ref{prob:fix-I.4}. With some patient questioning, students can be coaxed to ``create a copy'' of one of the triangles in the place where they wanted to relocate it. This is a little tricky, and might take a few tries. 
+}
+\end{annotation}
+
 \begin{conjecture}
 \label{conj:ASS}
 If we weaken the hypothesis of the previous conjecture so that the angles $A$ and $D$ are still congruent but no longer assumed to be right angles, and leave the other hypotheses intact, the conclusion still holds.
 \end{conjecture}
+
+\begin{annotation}
+{
+\color{blue}
+This is false, but in an interesting way. Sometimes students will explore what they can say, and find there is only trouble when $A$ and $D$ are congruent obtuse angles, and even then there are only two possible triangles. This leads to a realization that the words acute and obtuse are really good for something geometric, and it allows for some open-ended inquiry for an enterprising student. At a time that feels appropriate, I will relate this to the difference between the Pythagorean Theorem and the Law of Cosines. One can say interesting things about how this relates to a quadratic equation having zero, one, or two solutions.
+}
+\end{annotation}
 
 Right triangles are very useful objects. 
 But we need to know when we have a right angle! 
@@ -1238,10 +1258,24 @@ Here is a wonderful characterization of right angles.
 If $AB$ is the diameter of a circle and $C$ lies on the circle, then angle $\angle ACB$ is a right angle.
 \end{conjecture}
 
+\begin{annotation}
+{
+\color{blue}
+This is pretty easy, but it uses the common technique of drawing some key thing not originally in the figure. At this point I pause to point out how useful that is as a general technique in classical geometry, and suggest that they might try it on any outstanding open problems where they feel stuck. If appropriate, I then add, ``Hint. Hint. Conjecture \ref{conj:rhombus-diagonals}.''
+}
+\end{annotation}
+
 \begin{conjecture}
 \label{conj:thales2}
 If $\angle ACB$ is a right angle, then $C$ lies on the circle with diameter $AB$.
 \end{conjecture}
+
+\begin{annotation}
+{
+\color{blue}
+This direction is the harder of the two. I like a proof by contradiction best, because it ends up using Conjecture \ref{conj:thales1}. Note that there are two cases, but if you can handle one, the other comes along in a similar way.
+}
+\end{annotation}
 
 Note that, together, Conjectures \ref{conj:thales1} and \ref{conj:thales2} yield this result:
 \begin{unthm}[Thales' Theorem] 
@@ -1255,6 +1289,14 @@ Euclid's \emph{Elements} is really an ancient Greek textbook.
 It seems clear that the method of axiomatic work typical of mathematics originated somehow with the Greeks before Euclid--say with Thales or with the Pythagoreans. But all of the literature has been lost to the ages.}
 \end{unthm}
 
+\begin{annotation}
+{
+\color{blue}
+I always stop the class and have a short conversation about 
+the idea of an ``if and only if'' statement. It is important to dispel the mystery of which part is which. I also share 
+that some prefer the terms ``necessary and sufficient`` and discuss what those mean in context.
+}
+\end{annotation}
 
 
 This is a case of a set of \emph{equivalent conditions}. We have stated it
